discussion/kv_engine/176424/176424_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Move Backfill Task to its own source files

Change-Id: I74fa054f38cd327221bbb106bb059ed827a51003

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-28 11:52:03.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-28 11:52:13.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304466/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-28 11:59:55.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/422/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/422/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/326/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/308/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/308/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/453/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/453/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/317/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/317/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/315/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/304/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/305/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/305/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/305/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/300/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/300/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17512/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
